# Win32-API-get_url

./: README.md  get_url.py
auto_get/: Cargo.toml
auto_get/src/: main.rs
get_url/: Cargo.toml
get_url/src/: main.rs
