[package]
name = "get_url"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
